[gd_scene load_steps=18 format=3]

[ext_resource type="Script" path="res://ui/MainMenu.gd" id="1"]
[ext_resource type="Shader" path="res://ui/shaders/frosted_glass.gdshader" id="2"]
[ext_resource type="FontFile" path="res://assets/fonts/SpaceGrotesk.ttf" id="3"]
[ext_resource type="FontFile" path="res://assets/fonts/Chivo.ttf" id="4"]
[ext_resource type="PackedScene" path="res://src/visual/BackgroundController.tscn" id="5"]

[sub_resource type="ShaderMaterial" id="1"]
shader = ExtResource("2")
shader_parameter/blur_amount = 3.1
shader_parameter/overlay_color = Color(0.08, 0.12, 0.18, 0.42)
shader_parameter/rim_strength = 0.28
shader_parameter/rim_width = 0.022
shader_parameter/corner_radius = 0.125
shader_parameter/edge_softness = 0.008

[sub_resource type="Shader" id="2"]
code = "shader_type canvas_item;\nrender_mode unshaded;\n\nuniform vec4 vignette_color : source_color = vec4(0.01, 0.03, 0.08, 0.52);\nuniform float intensity : hint_range(0.0, 2.0) = 1.0;\n\nvoid fragment() {\n\tvec2 d = (UV - vec2(0.5)) * vec2(1.2, 1.35);\n\tfloat v = smoothstep(0.25, 1.0, dot(d, d));\n\tCOLOR = vec4(vignette_color.rgb, vignette_color.a * v * intensity);\n}\n"

[sub_resource type="ShaderMaterial" id="3"]
shader = SubResource("2")
shader_parameter/intensity = 1.0

[sub_resource type="Shader" id="4"]
code = "shader_type canvas_item;\nrender_mode unshaded;\n\nuniform vec4 glow_color : source_color = vec4(0.52, 0.78, 1.0, 0.2);\nuniform vec2 center = vec2(0.5, 0.18);\nuniform vec2 radius = vec2(0.85, 0.45);\n\nvoid fragment() {\n\tvec2 q = (UV - center) / radius;\n\tfloat d = length(q);\n\tfloat a = pow(max(0.0, 1.0 - d), 1.8);\n\tCOLOR = vec4(glow_color.rgb * a, glow_color.a * a);\n}\n"

[sub_resource type="ShaderMaterial" id="4"]
shader = SubResource("4")
shader_parameter/glow_color = Color(0.52, 0.78, 1, 0.24)
shader_parameter/center = Vector2(0.5, 0.12)
shader_parameter/radius = Vector2(0.9, 0.42)

[sub_resource type="ShaderMaterial" id="5"]
shader = SubResource("4")
shader_parameter/glow_color = Color(0.45, 0.62, 1, 0.14)
shader_parameter/center = Vector2(0.5, 0.95)
shader_parameter/radius = Vector2(0.95, 0.52)

[sub_resource type="StyleBoxFlat" id="6"]
bg_color = Color(0.04, 0.08, 0.16, 0.08)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.86, 0.95, 1, 0.36)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40
shadow_color = Color(0.01, 0.04, 0.1, 0.5)
shadow_size = 20
anti_aliasing_size = 1.2

[sub_resource type="StyleBoxFlat" id="7"]
bg_color = Color(0.06, 0.12, 0.2, 0.62)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.86, 0.95, 1, 0.44)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40
shadow_color = Color(0.01, 0.06, 0.12, 0.4)
shadow_size = 9
anti_aliasing_size = 1.2

[sub_resource type="StyleBoxFlat" id="8"]
bg_color = Color(0.12, 0.22, 0.34, 0.8)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.9, 0.97, 1, 0.7)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40
shadow_color = Color(0, 0.04, 0.1, 0.45)
shadow_size = 10
anti_aliasing_size = 1.2

[sub_resource type="StyleBoxFlat" id="9"]
bg_color = Color(0.03, 0.08, 0.16, 0.9)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.86, 0.95, 1, 0.58)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40
shadow_color = Color(0, 0.03, 0.08, 0.4)
shadow_size = 8
anti_aliasing_size = 1.2

[sub_resource type="StyleBoxFlat" id="10"]
bg_color = Color(0.22, 0.54, 0.9, 0.84)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.86, 0.96, 1, 0.78)
corner_radius_top_left = 36
corner_radius_top_right = 36
corner_radius_bottom_right = 36
corner_radius_bottom_left = 36
shadow_color = Color(0.06, 0.22, 0.44, 0.56)
shadow_size = 14
anti_aliasing_size = 1.2

[sub_resource type="StyleBoxFlat" id="11"]
bg_color = Color(0.32, 0.66, 1, 0.94)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.9, 0.98, 1, 0.92)
corner_radius_top_left = 36
corner_radius_top_right = 36
corner_radius_bottom_right = 36
corner_radius_bottom_left = 36
shadow_color = Color(0.08, 0.28, 0.56, 0.68)
shadow_size = 16
anti_aliasing_size = 1.2

[sub_resource type="StyleBoxFlat" id="12"]
bg_color = Color(0.18, 0.44, 0.82, 0.96)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.85, 0.95, 1, 0.9)
corner_radius_top_left = 36
corner_radius_top_right = 36
corner_radius_bottom_right = 36
corner_radius_bottom_left = 36
shadow_color = Color(0.05, 0.2, 0.44, 0.62)
shadow_size = 12
anti_aliasing_size = 1.2

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="BackgroundController" parent="." instance=ExtResource("5")]

[node name="BackgroundLayer" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Dimmer" type="ColorRect" parent="BackgroundLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.01, 0.03, 0.08, 0.26)

[node name="Vignette" type="ColorRect" parent="BackgroundLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
material = SubResource("3")
mouse_filter = 2
color = Color(1, 1, 1, 1)

[node name="CenterPanel" type="MarginContainer" parent="."]
anchor_left = 0.08
anchor_top = 0.14
anchor_right = 0.92
anchor_bottom = 0.86
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
mouse_filter = 2

[node name="GlassPanel" type="ColorRect" parent="CenterPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
material = SubResource("1")
mouse_filter = 2
color = Color(1, 1, 1, 1)

[node name="PanelChrome" type="Panel" parent="CenterPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme_override_styles/panel = SubResource("6")

[node name="AccentGlowTop" type="ColorRect" parent="CenterPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
material = SubResource("4")
mouse_filter = 2
color = Color(1, 1, 1, 1)

[node name="AccentGlowBottom" type="ColorRect" parent="CenterPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
material = SubResource("5")
mouse_filter = 2
color = Color(1, 1, 1, 1)

[node name="PanelContent" type="MarginContainer" parent="CenterPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 34
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="ContentVBox" type="VBoxContainer" parent="CenterPanel/PanelContent"]
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/separation = 24

[node name="TitleBlock" type="VBoxContainer" parent="CenterPanel/PanelContent/ContentVBox"]
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="TitleLabel" type="Label" parent="CenterPanel/PanelContent/ContentVBox/TitleBlock"]
text = "Color Crunch"
horizontal_alignment = 1
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 70
theme_override_colors/font_color = Color(0.96, 0.99, 1, 1)
theme_override_colors/font_outline_color = Color(0.02, 0.05, 0.12, 0.9)
theme_override_constants/outline_size = 6

[node name="TrackLabel" type="Label" parent="CenterPanel/PanelContent/ContentVBox/TitleBlock"]
text = "Track"
horizontal_alignment = 1
theme_override_fonts/font = ExtResource("4")
theme_override_font_sizes/font_size = 24
theme_override_colors/font_color = Color(0.78, 0.86, 1, 0.95)
theme_override_colors/font_outline_color = Color(0.02, 0.05, 0.12, 0.7)
theme_override_constants/outline_size = 2

[node name="TrackSelectorRow" type="HBoxContainer" parent="CenterPanel/PanelContent/ContentVBox"]
size_flags_horizontal = 3
theme_override_constants/separation = 14
alignment = 1

[node name="TrackPrevButton" type="Button" parent="CenterPanel/PanelContent/ContentVBox/TrackSelectorRow"]
custom_minimum_size = Vector2(76, 76)
text = "<"
theme_override_fonts/font = ExtResource("4")
theme_override_font_sizes/font_size = 34
theme_override_colors/font_color = Color(0.95, 0.98, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.95, 0.98, 1, 1)
theme_override_styles/normal = SubResource("7")
theme_override_styles/hover = SubResource("8")
theme_override_styles/focus = SubResource("8")
theme_override_styles/pressed = SubResource("9")

[node name="TrackInfoHost" type="Control" parent="CenterPanel/PanelContent/ContentVBox/TrackSelectorRow"]
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 86)
clip_contents = true

[node name="TrackInfo" type="VBoxContainer" parent="CenterPanel/PanelContent/ContentVBox/TrackSelectorRow/TrackInfoHost"]
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/separation = 4
alignment = 1

[node name="TrackTitleLabel" type="Label" parent="CenterPanel/PanelContent/ContentVBox/TrackSelectorRow/TrackInfoHost/TrackInfo"]
text = "TRACK 01"
horizontal_alignment = 1
theme_override_fonts/font = ExtResource("4")
theme_override_font_sizes/font_size = 32
theme_override_colors/font_color = Color(0.92, 0.97, 1, 1)
theme_override_colors/font_outline_color = Color(0.02, 0.05, 0.12, 0.82)
theme_override_constants/outline_size = 3

[node name="TrackNameLabel" type="Label" parent="CenterPanel/PanelContent/ContentVBox/TrackSelectorRow/TrackInfoHost/TrackInfo"]
text = "Nebula Run"
horizontal_alignment = 1
theme_override_fonts/font = ExtResource("4")
theme_override_font_sizes/font_size = 24
theme_override_colors/font_color = Color(0.76, 0.86, 1, 0.96)
theme_override_colors/font_outline_color = Color(0.02, 0.05, 0.12, 0.72)
theme_override_constants/outline_size = 2

[node name="TrackNextButton" type="Button" parent="CenterPanel/PanelContent/ContentVBox/TrackSelectorRow"]
custom_minimum_size = Vector2(76, 76)
text = ">"
theme_override_fonts/font = ExtResource("4")
theme_override_font_sizes/font_size = 34
theme_override_colors/font_color = Color(0.95, 0.98, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.95, 0.98, 1, 1)
theme_override_styles/normal = SubResource("7")
theme_override_styles/hover = SubResource("8")
theme_override_styles/focus = SubResource("8")
theme_override_styles/pressed = SubResource("9")

[node name="Spacer" type="Control" parent="CenterPanel/PanelContent/ContentVBox"]
size_flags_vertical = 3

[node name="StartButton" type="Button" parent="CenterPanel/PanelContent/ContentVBox"]
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 94)
text = "Start Run"
theme_override_fonts/font = ExtResource("4")
theme_override_font_sizes/font_size = 44
theme_override_colors/font_color = Color(0.98, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.97, 0.99, 1, 1)
theme_override_colors/font_outline_color = Color(0.03, 0.08, 0.18, 0.9)
theme_override_constants/outline_size = 3
theme_override_styles/normal = SubResource("10")
theme_override_styles/hover = SubResource("11")
theme_override_styles/focus = SubResource("11")
theme_override_styles/pressed = SubResource("12")

[node name="FooterHint" type="Label" parent="."]
anchor_left = 0.12
anchor_top = 0.905
anchor_right = 0.88
anchor_bottom = 0.975
text = "Swipe or tap arrows to change track"
horizontal_alignment = 1
vertical_alignment = 1
theme_override_fonts/font = ExtResource("4")
theme_override_font_sizes/font_size = 22
theme_override_colors/font_color = Color(0.72, 0.82, 1, 0.9)
theme_override_colors/font_outline_color = Color(0.01, 0.03, 0.08, 0.75)
theme_override_constants/outline_size = 2
